Revision history for Catalyst-Plugin-Statsd.

{{$NEXT}}
  [Tests]
  - Added tests for profiling.

v0.5.1    2019-05-28 12:45:40+01:00 Europe/London
  [Documentation]
  - Documented known issue with custom profiling points.

  - Bumped copyright year.

v0.5.0    2018-12-03 17:39:30+00:00 Europe/London
  [Enhancements]
  - disable_stats_report default is based on !$c->debug.

  [Documentation]
  - Added more documentation about the metrics.

v0.4.2    2018-11-30 15:58:08+00:00 Europe/London
  [Tests]
  - Fixed tests to allow missing log output name.

  - Added diagnostics.

v0.4.1    2018-11-29 23:16:52+00:00 Europe/London
  [Tests]
  - Require Term::Size::Any so that Catalyst logging works on some
    systems, #1.

v0.4.0    2018-11-29 18:59:35+00:00 Europe/London
  [Incompatabilities]
  - Catalyst v5.90123 is now required.

  - Perl v5.10.1 or newer is required.

  [Enhancements]
  - This modifies the log_stats method, and the stats report table can
    be disabled.

v0.3.0    2018-10-26 16:58:25+01:00 Europe/London
  [Enhancements]
  - Added the statsd_client method.

  [Documentation]
  - Added INSTALL file to the distribution.

  [Toolchain]
  - Tweaks to dist.ini for simplifying build.

  [Other]
  - Remove cruft from distribution.

v0.2.0    2018-10-18 23:14:52+01:00 Europe/London
  [Enhancements]
  - Added statsd_metric_name_filter method to filter/munge metric
    names.

  [Documentation]
  - Added note about metrics logged.

  - Reorganised POD within the module.

  [Other]
  - Explicitly require finalze method.

v0.1.2    2018-10-18 21:06:39+01:00 Europe/London
  [Documentation]
  - Amended Changes file.

  [Tests]
  - Specify a minimum version of Net::Statsd::Tiny.

  [Other]
  - Updated metadata keywords.

v0.1.1    2018-10-17 09:55:46+01:00 Europe/London
  - Renamed distribution to make PAUSE happy.

v0.1.0    2018-10-16 22:36:52+01:00 Europe/London
  - Initial release as CatalystX-Statsd.