@@ -77,6 +77,10 @@ $c->statsd_metric_name_filter( $stat_or_name );
 This method returns the name to be used for logging stats, or `undef`
 if the metric should be ignored.
 
+Only alphanumeric characters, hyphens or underscores in namespaces are
+accepted. All other characters are converted to dots, with consecutive
+dots compressed into a single dot.
+
 If it is passed a non-arrayref, then it will stringify the argument
 and return that.
 
